--- a/Rent/Client/Components/Pagination.razor
+++ b/Rent/Client/Components/Pagination.razor
@@ -1,4 +1,4 @@
-<nav aria-label="Page navigation example">
+<nav aria-label="Page navigation">
     <ul class="pagination justify-content-center">
         @foreach (var link in _links)
         {
@@ -27,7 +27,7 @@
         {
             _links = new List<PagingLink>();
 
-            _links.Add(new PagingLink(MetaData.CurrentPage - 1, MetaData.HasPrevious, "Предыдущая"));
+            _links.Add(new PagingLink(MetaData.CurrentPage - 1, MetaData.HasPrevious, "Назад"));
 
             for (int i = 1; i <= MetaData.TotalPages; i++)
             {
@@ -37,7 +37,7 @@
                 }
             }
 
-            _links.Add(new PagingLink(MetaData.CurrentPage + 1, MetaData.HasNext, "Следующая"));
+            _links.Add(new PagingLink(MetaData.CurrentPage + 1, MetaData.HasNext, "Вперёд"));
         }
 
         private async Task OnSelectedPage(PagingLink link)
