--- a/Rent/Client/Shared/MainHeader.razor
+++ b/Rent/Client/Shared/MainHeader.razor
@@ -1,11 +1,7 @@
-﻿{
-  "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
-}
+﻿<header class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
+    <h5 class="my-0 mr-md-auto font-weight-normal">Недвижимость</h5>
+    <div class="top-row px-4 auth">
+        <a class="btn btn-outline-primary" href="/">Главная</a>
+        <LoginDisplay />
+    </div>
+</header>
