--- a/Rent/Client/Shared/MainLayout.razor
+++ b/Rent/Client/Shared/MainLayout.razor
@@ -1,17 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <div class="main">
-        <div class="top-row px-4 auth">
-            <LoginDisplay />
-        </div>
-
-        <div class="content px-4">
-            @Body
-        </div>
-    </div>
+<MainHeader />
+<div class="container-fluid">
+    @Body
 </div>
