--- a/Rent/Client/Pages/Index.razor
+++ b/Rent/Client/Pages/Index.razor
@@ -1,11 +1,5 @@
 ﻿@page "/"
-@attribute [AllowAnonymous]
 @inject IRealtiesService _realties
-
-    @if (IsLoading)
-    {
-        <span>Загружаю предложения...</span>
-    }
 
     <div class="row">
         <div class="col-md-4">
@@ -16,15 +10,8 @@
         </div>
 
     </div>
-
     <div class="row">
-        @foreach (var realty in RealtiesList)
-        {
-            <div class="col-4">
-                <RealtiesMain RealtyMain="@realty" />
-            </div>
-        }
-
+        <RealtiesMain Realties="RealtiesList" />
     </div>
 
     <div class="row">
@@ -33,13 +20,10 @@
         </div>
     </div>
 
-
     @code {
         public List<Realty> RealtiesList { get; set; } = new List<Realty>();
         public MetaData MetaData { get; set; } = new MetaData();
         private PagingParameters _pagingParameters = new PagingParameters();
-        private bool IsLoading { get; set; }
-        public bool HasLoaded { get; set; }
 
         protected async override Task OnInitializedAsync()
         {
@@ -48,7 +32,6 @@
 
         private async Task SearchChanged(string searchTerm)
         {
-            Console.WriteLine(searchTerm);
             _pagingParameters.PageNumber = 1;
             _pagingParameters.SearchTerm = searchTerm;
             await GetRealties();
@@ -68,17 +51,8 @@
 
         private async Task GetRealties()
         {
-            if (HasLoaded)
-            {
-                return;
-            }
-            IsLoading = true;
             var pagingResponse = await _realties.GetRealtiesPaged(_pagingParameters);
             RealtiesList = pagingResponse.Items;
             MetaData = pagingResponse.MetaData;
-            IsLoading = false;
-            HasLoaded = true;
         }
-
-
     }
